--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ navbar li {
 
 navbar li:hover {
     
-    color: #101b3b;
+    color: blue;
 }
 
 
@@ -229,7 +229,7 @@ navbar li {
 
  navbar li:hover {
     
-    color: #101b3b;
+    color: blue;
 }
    
     
